test/trivial/shannon/quit/halt.good
halt.chpl:8: error: halt reached - x and y are not equal!
x = 13, y = 99.9
